--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-fade-in": "^1.1.3",
     "react-responsive": "^9.0.0-beta.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-image-fade-in": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
